deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1
  namespace: example-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: container1
          image: adikarthik/demo
