mainsidecarcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: main-sidecar-pod
  labels:
    app: main-sidecar-app
spec:
  containers:
    # Main container (Nginx web server)
    - name: main-container
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
    - name: sidecar-container
      image: busybox
      command: ["sh", "-c", "while true; do echo $(date) >> /app/logs.txt; sleep 5; done"]
      volumeMounts:
        - name: shared-volume
          mountPath: /app
          
  volumes:
    - name: shared-volume
      emptyDir: {}
