pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: example-namespace
spec:
  containers:
    - name: newpoddemo
      image: adikarthik/demo
