LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: srujanalb
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
